--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,6 +46,54 @@
     <url-pattern>/</url-pattern>
   </servlet-mapping>
 
+  <display-name>Archetype Created Web Application</display-name>
+  <context-param>
+    <param-name>webAppRootKey</param-name>
+    <param-value>GitHubCommonWeb</param-value>
+  </context-param>
+  <welcome-file-list>
+    <welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
+
+  <!-- 指定spring相关文件的位置 -->
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <!-- <param-value>classpath:spring/spring.xml,classpath:spring/spring-ehcache.xml,classpath:spring/spring-hibernate.xml,classpath:spring/spring-tasks.xml</param-value> -->
+    <param-value>classpath:spring/spring-mybatis.xml</param-value>
+  </context-param>
+
+  <context-param>
+    <param-name>logbackConfigLocation</param-name>
+    <param-value>classpath:logback.xml</param-value>
+  </context-param>
+  <listener>
+    <listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
+  </listener>
+  <!-- 开启spring功能 -->
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+  <!-- 防止内存溢出监听器 -->
+  <listener>
+    <listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
+  </listener>
+  <servlet>
+    <servlet-name>provider</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>
+        classpath:spring/applicationContext.xml
+      </param-value>
+      <!--<param-value>/WEB-INF/classes/spring/applicationContext.xml</param-value>-->
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>provider</servlet-name>
+    <url-pattern>/*</url-pattern>
+  </servlet-mapping>
+
 
 </web-app>
 
