--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,7 @@
   <version>1.0-SNAPSHOT</version>
   <name>commonWeb Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  <properties>
-    <spring.version>4.2.6.RELEASE</spring.version>
-    <logback.version>1.1.6</logback.version>
-    <slf4j.version>1.7.22</slf4j.version>
-    <servlet.version>3.0.1</servlet.version>
-    <shiro.version>1.2.5</shiro.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+
 
   <dependencies>
     <dependency>
@@ -197,8 +190,30 @@
       <artifactId>zkclient</artifactId>
       <version>0.10</version>
     </dependency>
-
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-pool2 -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-pool2</artifactId>
+      <version>${commons.pool2.version}</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>${redis.clients.version}</version>
+    </dependency>
   </dependencies>
+
+  <properties>
+    <redis.clients.version>2.9.0</redis.clients.version>
+    <spring.version>4.2.6.RELEASE</spring.version>
+    <logback.version>1.1.6</logback.version>
+    <slf4j.version>1.7.22</slf4j.version>
+    <servlet.version>3.0.1</servlet.version>
+    <shiro.version>1.2.5</shiro.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <commons.pool2.version>2.5.0</commons.pool2.version>
+  </properties>
   <build>
     <finalName>commonWeb</finalName>
   </build>
