--- a/pom.xml
+++ b/pom.xml
@@ -255,6 +255,12 @@
       <artifactId>spring-kafka</artifactId>
       <version>2.2.2.RELEASE</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.integration/spring-integration-kafka -->
+    <dependency>
+      <groupId>org.springframework.kafka</groupId>
+      <artifactId>spring-kafka</artifactId>
+      <version>2.1.0.RELEASE</version>
+    </dependency>
 
   </dependencies>
 
