--- a/pom.xml
+++ b/pom.xml
@@ -222,12 +222,18 @@
       <artifactId>jedis</artifactId>
       <version>${redis.clients.version}</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka -->
+ <!--   <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka_2.12</artifactId>
+      <version>2.1.0</version>
+    </dependency>-->
 
     <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka -->
     <dependency>
       <groupId>org.apache.kafka</groupId>
       <artifactId>kafka_2.12</artifactId>
-      <version>1.0.0</version>
+      <version>2.1.0</version>
       <exclusions>
         <exclusion>
           <artifactId>jmxri</artifactId>
@@ -247,8 +253,15 @@
     <dependency>
       <groupId>org.apache.kafka</groupId>
       <artifactId>kafka-clients</artifactId>
-      <version>1.0.0</version>
+      <version>2.1.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
+<!--    <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka-clients</artifactId>
+      <version>2.1.0</version>
+    </dependency>-->
+
     <!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka -->
    <!-- <dependency>
       <groupId>org.springframework.kafka</groupId>
@@ -258,7 +271,7 @@
     <dependency>
       <groupId>org.springframework.kafka</groupId>
       <artifactId>spring-kafka</artifactId>
-      <version>2.1.11.RELEASE</version><!--2.2以上版本不支持 指定具体监听类-->
+      <version>2.2.2.RELEASE</version><!--2.1.11.RELEASE  2.2以上版本不支持 指定具体监听类-->
     </dependency>
 
   </dependencies>
