--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -12,3 +12,6 @@ jdbc.driver=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://192.168.42.29:3306/test?useUnicode=true&characterEncoding=UTF-8&useSSL=false
 jdbc.username=ctl
 jdbc.password=liebe
+
+bootstrap.servers=192.168.42.29:9092
+kafka.defaultTopic=ordercall
