--- a/pom.xml
+++ b/pom.xml
@@ -273,7 +273,12 @@
       <artifactId>spring-kafka</artifactId>
       <version>2.2.2.RELEASE</version><!--2.1.11.RELEASE  2.2以上版本不支持 指定具体监听类-->
     </dependency>
-
+    <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-redis -->
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-redis</artifactId>
+      <version>1.7.11.RELEASE</version>
+    </dependency>
   </dependencies>
 
   <properties>
