--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -15,3 +15,17 @@ jdbc.password=liebe
 
 bootstrap.servers=192.168.42.29:9092
 kafka.defaultTopic=ordercall
+
+redis.cluster.node1.address=192.168.42.29
+redis.cluster.node1.port=6379
+redis.cluster.node2.address=192.168.42.29
+redis.cluster.node2.port=6380
+redis.cluster.node3.address=192.168.42.29
+redis.cluster.node3.port=6381
+redis.cluster.node4.address=192.168.42.29
+redis.cluster.node4.port=6382
+redis.cluster.node5.address=192.168.42.29
+redis.cluster.node5.port=6383
+redis.cluster.node6.address=192.168.42.29
+redis.cluster.node6.port=6384
+redis.cluster.password=liebe
