--- a/pom.xml
+++ b/pom.xml
@@ -277,13 +277,26 @@
     <dependency>
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-redis</artifactId>
-      <version>1.7.11.RELEASE</version>
+      <version>2.1.3.RELEASE</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.session/spring-session -->
+    <dependency>
+      <groupId>org.springframework.session</groupId>
+      <artifactId>spring-session</artifactId>
+      <version>1.3.4.RELEASE</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-commons -->
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-commons</artifactId>
+      <version>2.1.3.RELEASE</version>
+    </dependency>
+
   </dependencies>
 
   <properties>
     <redis.clients.version>2.9.0</redis.clients.version>
-    <spring.version>4.2.6.RELEASE</spring.version>
+    <spring.version>5.1.3.RELEASE</spring.version>
     <logback.version>1.1.6</logback.version>
     <slf4j.version>1.7.22</slf4j.version>
     <servlet.version>3.0.1</servlet.version>
