--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -29,3 +29,8 @@ redis.cluster.node5.port=6383
 redis.cluster.node6.address=192.168.42.29
 redis.cluster.node6.port=6384
 redis.cluster.password=liebe
+redis.database=2
+redis.host=192.168.2.51
+redis.port=6379
+redis.password=123456
+redis.timeout=10000
